Change input default value

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ on:
       target:
         description: 'Deploy target'
         required: true
-        default: 'prod'
+        default: ''
         type: choice
         options:
         - prod
