--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,9 +6,11 @@ on:
       target:
         description: 'Deploy target'
         required: true
-        default: ''
+        default: 'prod'
         type: choice
         options:
+        - dev
+        - stage
         - prod
   push:
     tags:
@@ -30,7 +32,7 @@ jobs:
   
   deploy-dev:
     needs: [build-image]
-    if: endsWith(github.ref, 'dev')
+    if: endsWith(github.ref, 'dev') || ${{inputs.target}} == 'dev'
     runs-on: ubuntu-latest
     steps:
     - name: Run script file
@@ -38,7 +40,7 @@ jobs:
 
   deploy-stage:
     needs: [build-image]
-    if: endsWith(github.ref, 'stage')
+    if: endsWith(github.ref, 'stage') || ${{inputs.target}} == 'stage'
     runs-on: ubuntu-latest
     steps:
     - name: Run script file
@@ -50,4 +52,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Run script file
-      run: echo 'prod'
+      run: echo ${{github.event_name}}
