--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,5 @@
 name: Build and push backend image
+run-name: Build and deploy with ${{ github.ref }} by @${{ github.actor }}
 
 on:
   workflow_dispatch:
@@ -9,8 +10,6 @@ on:
         default: 'prod'
         type: choice
         options:
-        - dev
-        - stage
         - prod
   push:
     tags:
@@ -32,7 +31,7 @@ jobs:
   
   deploy-dev:
     needs: [build-image]
-    if: endsWith(github.ref, 'dev') || ${{inputs.target}} == 'dev'
+    if: endsWith(github.ref, 'dev')
     runs-on: ubuntu-latest
     steps:
     - name: Run script file
@@ -40,7 +39,7 @@ jobs:
 
   deploy-stage:
     needs: [build-image]
-    if: endsWith(github.ref, 'stage') || ${{inputs.target}} == 'stage'
+    if: endsWith(github.ref, 'stage')
     runs-on: ubuntu-latest
     steps:
     - name: Run script file
@@ -48,7 +47,7 @@ jobs:
 
   deploy-production:
     needs: [build-image]
-    if: ${{inputs.target}} == 'prod'
+    if: ${{github.event_name}} == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
     - name: Run script file
