--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,6 +10,8 @@ on:
         default: 'prod'
         type: choice
         options:
+        - dev
+        - stage
         - prod
   push:
     tags:
@@ -31,7 +33,7 @@ jobs:
   
   deploy-dev:
     needs: [build-image]
-    if: endsWith(github.ref, 'dev')
+    if: endsWith(github.ref, 'dev') || ${{ inputs.target == 'dev' }}
     runs-on: ubuntu-latest
     steps:
     - name: Run script file
@@ -39,7 +41,7 @@ jobs:
 
   deploy-stage:
     needs: [build-image]
-    if: endsWith(github.ref, 'stage')
+    if: endsWith(github.ref, 'stage') || ${{ inputs.target == 'stage' }}
     runs-on: ubuntu-latest
     steps:
     - name: Run script file
@@ -47,7 +49,7 @@ jobs:
 
   deploy-production:
     needs: [build-image]
-    if: ${{ github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event_name == 'workflow_dispatch' }} && ${{ inputs.target == 'prod' }}
     runs-on: ubuntu-latest
     steps:
     - name: Run script file
